--- a/com.dynamo.cr/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr/com.dynamo.cr.common/build.properties
@@ -28,4 +28,7 @@ bin.includes = META-INF/,\
                ext/slf4j/slf4j-api-1.6.4.jar,\
                DYNAMO_HOME/share/java/resource.jar,\
                DYNAMO_HOME/share/java/engine.jar,\
-               DYNAMO_HOME/share/java/upnp.jar
+               DYNAMO_HOME/share/java/upnp.jar,\
+               ext/commons-configuration-1.8.jar,\
+               ext/commons-lang-2.6.jar,\
+               ext/commons-logging-1.1.1.jar
