--- a/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -9,6 +9,7 @@ progress_re: "\\[(\\d+)/(\\d+)\\]"
 smtp_host: ""
 smtp_username: ""
 smtp_password: ""
+signed_engine_root: "tmp/engine_root"
 
 invitation_template {
     from: "noreply@defold.se"
