--- a/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
@@ -10,6 +10,7 @@ builtins_directory: "/Users/chmu/tmp/dynamo-home/content/builtins"
 smtp_host: "smtp.gmail.com"
 smtp_username: "noreply@defold.se"
 smtp_password: "kodri7Knydva"
+signed_engine_root: "/tmp/engine_root"
 
 invitation_template {
     from: "noreply@defold.se"
