Webhook authentication with tests. case 1085

--- a/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -10,6 +10,7 @@ smtp_host: ""
 smtp_username: ""
 smtp_password: ""
 signed_engine_root: "tmp/engine_root"
+billing_shared_key: "mvbGI6p2DISmoifcwLwq"
 
 invitation_template {
     from: "noreply@defold.se"
