--- a/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
@@ -11,6 +11,7 @@ smtp_host: "smtp.gmail.com"
 smtp_username: "noreply@defold.se"
 smtp_password: "kodri7Knydva"
 signed_engine_root: "/tmp/engine_root"
+billing_shared_key: "mvbGI6p2DISmoifcwLwq"
 
 invitation_template {
     from: "noreply@defold.se"
