--- a/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
@@ -10,6 +10,7 @@ builtins_directory: "/home/rasv/tmp/dynamo_home/content/builtins"
 smtp_host: "smtp.gmail.com"
 smtp_username: "noreply@defold.se"
 smtp_password: "kodri7Knydva"
+billing_shared_key: "mvbGI6p2DISmoifcwLwq"
 
 invitation_template {
     from: "noreply@defold.se"
