Chargify integration with test. case 1086

--- a/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -10,7 +10,9 @@ smtp_host: ""
 smtp_username: ""
 smtp_password: ""
 signed_engine_root: "tmp/engine_root"
-billing_shared_key: "mvbGI6p2DISmoifcwLwq"
+billing_shared_key: "test_shared_key"
+billing_api_url: "https://defold-test.chargify.com"
+billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
 
 invitation_template {
     from: "noreply@defold.se"
