--- a/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
@@ -12,6 +12,8 @@ smtp_username: "noreply@defold.se"
 smtp_password: "kodri7Knydva"
 signed_engine_root: "/tmp/engine_root"
 billing_shared_key: "mvbGI6p2DISmoifcwLwq"
+billing_api_url: "https://defold-test.chargify.com"
+billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
 
 invitation_template {
     from: "noreply@defold.se"
