--- a/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
@@ -11,6 +11,8 @@ smtp_host: "smtp.gmail.com"
 smtp_username: "noreply@defold.se"
 smtp_password: "kodri7Knydva"
 billing_shared_key: "mvbGI6p2DISmoifcwLwq"
+billing_api_url: "https://defold-test.chargify.com"
+billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
 
 invitation_template {
     from: "noreply@defold.se"
