Correct shared keys for chargify test site. case case 1086

--- a/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -10,7 +10,7 @@ smtp_host: ""
 smtp_username: ""
 smtp_password: ""
 signed_engine_root: "tmp/engine_root"
-billing_shared_key: "test_shared_key"
+billing_shared_key: "vw2IIZFExzi1C1-1BW-q"
 billing_api_url: "https://defold-test.chargify.com"
 billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
 
