--- a/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
@@ -10,7 +10,7 @@ builtins_directory: "/home/rasv/tmp/dynamo_home/content/builtins"
 smtp_host: "smtp.gmail.com"
 smtp_username: "noreply@defold.se"
 smtp_password: "kodri7Knydva"
-billing_shared_key: "mvbGI6p2DISmoifcwLwq"
+billing_shared_key: "vw2IIZFExzi1C1-1BW-q"
 billing_api_url: "https://defold-test.chargify.com"
 billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
 
