--- a/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
@@ -11,7 +11,7 @@ smtp_host: "smtp.gmail.com"
 smtp_username: "noreply@defold.se"
 smtp_password: "kodri7Knydva"
 signed_engine_root: "/tmp/engine_root"
-billing_shared_key: "mvbGI6p2DISmoifcwLwq"
+billing_shared_key: "vw2IIZFExzi1C1-1BW-q"
 billing_api_url: "https://defold-test.chargify.com"
 billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
 
