Fixed signed engine root and info-sender in mail addresses.

--- a/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -15,7 +15,7 @@ billing_api_url: "https://defold-test.chargify.com"
 billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
 
 invitation_template {
-    from: "noreply@defold.se"
+    from: "\"Defold\" <info@defold.se>"
     subject: "invitation"
     message: "${key}"
 }
