Listing of products on web site. case 1087
A bit of a monster change, sorry about that!

* Moved products from DB to config for easier editing and boot-strapping
* Added URLs to hosted pages to product and subscription, since they should be generated on the server (tokens etc)
* Fixed erroneous out-of-sync between state enums in protocol and model
* Added retrieval of subscriptions from provider
  - Mocked retrieval in tests
* The integration test (BillingIntegrationTest) did not use the real chargify service to test against
* The subscription is supplied back in the response of POSTs
* Corrected states in tests to actual chargify values (active instead of pending in some places)
* POST take one external_id parameter and then reads from chargify instead of every different value
* Added Server#getProductByHandle
* Subscriptions are fully removed at DELETE instead of being downgraded
  - "No subscription" is still considered to be a default subscription (free)
* Token generation (SHA) for hosted update pages
* Product listing on new page from dashboard, used for migrations
* Working credit card update will come in a later commit

--- a/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
+++ b/com.dynamo.cr/com.dynamo.cr.server.test/test_data/crepo_test.config
@@ -50,3 +50,21 @@ project_templates {
     path: "tmp/templates/proj1"
     description: "Project 1"
 }
+
+products {
+    id: 1589727
+    name: "Free"
+    handle: "free"
+    fee: 0
+    max_member_count: 1
+    default: 1
+}
+
+products {
+    id: 1589766
+    name: "Small"
+    handle: "small"
+    fee: 20
+    max_member_count: -1
+    default: 0
+}
