--- a/com.dynamo.cr/com.dynamo.cr.web2/.gitignore
+++ b/com.dynamo.cr/com.dynamo.cr.web2/.gitignore
@@ -1,12 +1,11 @@
-.gwt/.gwt-log
-war/WEB-INF/deploy
-war/WEB-INF/classes
-war/WEB-INF/lib/*.jar
-war/WEB-INF/appengine-generated
-war/defold/
-war/doc/*.json
-war/site/
-war/images/
-test-classes/*
-gwt-unitCache/*
-
+/.gwt/.gwt-log
+/war/WEB-INF/deploy
+/war/WEB-INF/classes
+/war/WEB-INF/lib/*.jar
+/war/WEB-INF/appengine-generated
+/war/defold/
+/war/doc/*.json
+/war/site/
+/war/images/
+/test-classes/*
+/gwt-unitCache/*
