Simple static blogging system. case 1134
* The current single blog-file is
  automatically split into N "files" with 
  title, summary and date
* Single index-summary page is created for all posts
* Fall-back to index.html in StaticServlet
* Add 500-page

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
@@ -35,9 +35,19 @@
         <url-pattern>/about/*</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>static</servlet-name>
+        <url-pattern>/blog/*</url-pattern>
+    </servlet-mapping>
+
     <error-page>
        <error-code>404</error-code>
        <location>/error/404.html</location>
+    </error-page>
+
+    <error-page>
+       <error-code>500</error-code>
+       <location>/error/500.html</location>
     </error-page>
 
 	<mime-mapping>
