Static reference documentation generation. case 1136
* Generation of static documentation from
  .sdoc-files

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
@@ -40,6 +40,11 @@
         <url-pattern>/blog/*</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>static</servlet-name>
+        <url-pattern>/ref/*</url-pattern>
+    </servlet-mapping>
+
     <error-page>
        <error-code>404</error-code>
        <location>/error/404.html</location>
