--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
@@ -188,6 +188,12 @@
                commandId="com.dynamo.cr.target.commands.sign"
                label="Sign Executable..."
                style="push">
+            <visibleWhen
+                  checkEnabled="false">
+               <test
+                     property="com.dynamo.cr.editor.is_dev">
+               </test>
+            </visibleWhen>
          </command>
       </menuContribution>
    </extension>
@@ -571,5 +577,15 @@
             </or>
          </enablement>
       </actionProvider>
+   </extension>
+   <extension
+         point="org.eclipse.core.expressions.propertyTesters">
+      <propertyTester
+            class="com.dynamo.cr.editor.core.EditorUtilPropertyTester"
+            id="com.dynamo.cr.editor.EditorUtilPropertyTester"
+            namespace="com.dynamo.cr.editor"
+            properties="is_dev"
+            type="java.lang.Object">
+      </propertyTester>
    </extension>
 </plugin>
