--- a/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
@@ -4,10 +4,14 @@
     "http://java.sun.com/dtd/web-app_2_3.dtd">
 
 <web-app>
-
-	<!-- Default page to serve -->
 	<welcome-file-list>
+        <!--  Do not add index.html as it would conflict with
+              the StaticServlet. We add welcome-files here for simplified
+              urls, /plans instead of /plans.html. We could of course modifiy and use the
+              StaticServlet instead
+        -->
 		<welcome-file>landing.html</welcome-file>
+        <welcome-file>plans.html</welcome-file>
 	</welcome-file-list>
 
     <servlet>
