CR branding. case 1041
* iOS icons in regular and retina sizes
  for iPhone and iPad
* Custom splash handler with custom progress bar
  and version number
* New splash screen
* Moved version number to Activator

--- a/com.dynamo.cr/com.dynamo.cr.editor/build.properties
+++ b/com.dynamo.cr/com.dynamo.cr.editor/build.properties
@@ -6,5 +6,7 @@ bin.includes = plugin.xml,\
                splash.bmp,\
                plugin_customization.ini,\
                lib/jetty-all-7.0.2.v20100331.jar,\
-               data/
+               data/,\
+               progress_fg.png,\
+               progress_bg.png
 source.. = src/
