Unified syntax highlighting for lua code. case 1193
* Google prettify
 - Reference docs
 - Asciidoc. [source-code, lua] should be used
   instead of [source, lua]
* Added asciidoc 8.6.7 to "ext". No longer a 
  dependency (locally installed)

--- a/engine/docs/defold.conf
+++ b/engine/docs/defold.conf
@@ -9,3 +9,15 @@ screenshot-style=template="screenshotblock",options=("sectionbody",)
 </div>
 
 
+[blockdef-listing]
+source-code-style=template="lua-listingblock"
+
+[lua-listingblock]
+<div class="listingblock{role? {role}}"{id? id="{id}"}>
+<div class="title">{caption=}{title}</div>
+<div class="content">
+<pre class="prettyprint linenums lang-lua"><tt>
+|
+</tt></pre>
+</div></div>
+
