Make splash screen work for exported product. case 1041

--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
@@ -30,20 +30,8 @@
                value="Defold Editor">
          </property>
          <property
-               name="startupProgressRect"
-               value="5,275,445,15">
-         </property>
-         <property
                name="preferenceCustomization"
                value="plugin_customization.ini">
-         </property>
-         <property
-               name="startupForegroundColor"
-               value="000000">
-         </property>
-         <property
-               name="startupMessageRect"
-               value="7,252,445,20">
          </property>
       </product>
    </extension>
@@ -575,11 +563,11 @@
          point="org.eclipse.ui.splashHandlers">
       <splashHandler
             class="com.dynamo.cr.editor.splashHandlers.SplashHandler"
-            id="com.dynamo.cr.editor.splashHandlers.extensible">
+            id="com.dynamo.cr.editor.splashHandlers.defold">
       </splashHandler>
       <splashHandlerProductBinding
             productId="com.dynamo.cr.editor.product"
-            splashId="com.dynamo.cr.editor.splashHandlers.extensible">
+            splashId="com.dynamo.cr.editor.splashHandlers.defold">
       </splashHandlerProductBinding>
    </extension>
 </plugin>
