Fixed invalid merge (d5c1a57f5b6941ccbf88edd9f6ffcdaad8127407)

--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
@@ -574,6 +574,9 @@
             properties="is_dev"
             type="java.lang.Object">
       </propertyTester>
+   </extension>
+   <extension
+         point="org.eclipse.ui.splashHandlers">
       <splashHandler
             class="com.dynamo.cr.editor.splashHandlers.SplashHandler"
             id="com.dynamo.cr.editor.splashHandlers.defold">
