Site-search. case 1197
* Search support using google search-api
* All statically generated .html-files are indexed
* Index updated with /search-index
* The /search-index is hit every 4 hours using a cronjob
* Updated to app-engine 1.7.0

--- a/com.dynamo.cr/com.dynamo.cr.web2/.settings/com.google.gdt.eclipse.core.prefs
+++ b/com.dynamo.cr/com.dynamo.cr.web2/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,4 @@
-#Tue Jun 28 12:28:39 CEST 2011
 eclipse.preferences.version=1
+launchConfigExternalUrlPrefix=
 warSrcDir=war
 warSrcDirIsOutput=true
