Static site index files and search updates. case 1212
* Readded index.html as "real" index-page, i.e.
  served by googles CDN
* Index-files for the StaticServlet are renamed
  to sindex.html
* Added option to skip indexing of generated files
* Removed trailing index.html and sindex.html from
  resulting search url

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
@@ -5,13 +5,7 @@
 
 <web-app>
 	<welcome-file-list>
-        <!--  Do not add index.html as it would conflict with
-              the StaticServlet. We add welcome-files here for simplified
-              urls, /plans instead of /plans.html. We could of course modifiy and use the
-              StaticServlet instead
-        -->
-		<welcome-file>landing.html</welcome-file>
-        <welcome-file>plans.html</welcome-file>
+		<welcome-file>index.html</welcome-file>
         <welcome-file>search.jsp</welcome-file>
 	</welcome-file-list>
 
