Added missing file dashboard.html and updated .gitignore

--- a/com.dynamo.cr/com.dynamo.cr.web2/.gitignore
+++ b/com.dynamo.cr/com.dynamo.cr.web2/.gitignore
@@ -3,13 +3,13 @@
 /war/WEB-INF/classes
 /war/WEB-INF/lib/*.jar
 /war/WEB-INF/appengine-generated
+/war/index.html
 /war/defold/
 /war/doc/*.json
 /war/site/
 /war/doc
 /war/about/*.html
 /war/error/*.html
-/war/*.html
 /war/plans
 /war/blog
 /war/ref
