Dashboard under /dashboard instead of /dashboard.html. case 1225

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/WEB-INF/web.xml
@@ -6,6 +6,7 @@
 <web-app>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
+        <welcome-file>dashboard.html</welcome-file>
         <welcome-file>search.jsp</welcome-file>
 	</welcome-file-list>
 
