Fixed config settings.

--- a/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/rasv.config
@@ -14,7 +14,8 @@ signed_engine_root: "/tmp/engine_root"
 billing_shared_key: "vw2IIZFExzi1C1-1BW-q"
 billing_api_url: "https://defold-test.chargify.com"
 billing_api_key: "60F3KxX-HHwTpXJ_-KC4"
-downloads_root: "/home/rasv/tmp/downloads"
+redirectDownloadsHost: "cr.defold.com"
+redirectDownloadsPort: 8080
 
 invitation_template {
     from: "\"Defold\" <info@defold.se>"
