Updated Help/Documentation link

--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
@@ -146,7 +146,7 @@
                style="push">
             <parameter
                   name="com.dynamo.crepo.commands.openWebLink.url"
-                  value="http://www.defold.se/#documentation:">
+                  value="http://www.defold.com/doc">
             </parameter>
          </command>
          <command
