Removed non-free products from configs. case 1249
* Also fixed bug that didn't treated unlimited team size correctly

--- a/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
+++ b/com.dynamo.cr/com.dynamo.cr.server/config/chmu.config
@@ -54,3 +54,12 @@ project_templates {
     path: "{templates_root}/tutorials/side_scroller"
     description: "Tutorial: Side-Scroller"
 }
+
+products {
+    id: 1780311
+    name: "Free"
+    handle: "free"
+    fee: 0
+    max_member_count: -1
+    default: 1
+}
