Some copy for iOS dev guide. case 1256

--- a/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor/plugin.xml
@@ -178,7 +178,7 @@
          </separator>
          <command
                commandId="com.dynamo.cr.target.commands.sign"
-               label="Sign Executable..."
+               label="Sign App..."
                style="push">
             <visibleWhen
                   checkEnabled="false">
