Top-level tip support and custom workbench window layout. case 1260
* New extension point
 - A tit is bound to an editor (using id)
 - Support for title, message and optional link
* Custom workbench window
 - in ApplicationWorkbenchWindowAdvisor#createWindowContents
 - Top-level message area
 - Main pane for workbench stuff
 - Status-bar with custom progress bar
 - Abstracted in EditorWindow
* Progress
 - Custom progress indicator in status-bar
 - The default is internal and quite complex
 - Only show progress for content-builds
 - com.dynamo.cr.editor.build should be set in the job
   in order to show up
* Renamed Activator to EditorUIPlugin
* Removed default progress-view
 - Not required anymore as we only show progress
   for builds. We should improve the custom progress
   indicator in status-line soon.

--- a/com.dynamo.cr/com.dynamo.cr.go/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.go/plugin.xml
@@ -402,4 +402,14 @@
             name="Scene Editor">
       </editor>
    </extension>
+   <extension
+         id="dsf"
+         point="com.dynamo.cr.editor.ui.tip">
+      <tip
+            editor-id="com.dynamo.cr.go.ui.goEditor"
+            link="For more information see the &lt;a href=&quot;http://www.defold.com/doc/scene_editing&quot;&gt;guide&lt;/a&gt;"
+            tip="Tracking: Alt + Right Button (Three Button) or Option + Ctrl + Mouse Button (One Button)\nDollying: Alt + Middle Button (Three Button) or Ctrl + Mouse Button (One Button)"
+            title="Navigation tip">
+      </tip>
+   Navigation tip:\nTracking: Alt + Right Button (Three Button) or Option + Ctrl + Mouse Button (One Button)\nDollying: Alt + Middle Button (Three Button) or Ctrl + Mouse Button (One Button)</extension>
 </plugin>
