--- a/com.dynamo.cr/com.dynamo.cr.tileeditor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.tileeditor/plugin.xml
@@ -1151,9 +1151,9 @@
    <extension
          point="com.dynamo.cr.editor.ui.tip">
       <tip
-            editor-id="com.dynamo.cr.tileeditor.tileSetEditor"
+            editor-id="com.dynamo.cr.tileeditor.GridEditor"
             link="See the &lt;a href=&quot;http://www.defold.com/doc/tiles&quot;&gt;tile guide&lt;/a&gt; for more information"
-            tip="Use space to show the palette or pick existing tiles with right-click (three button) or shift-click (one button)"
+            tip="Use the space bar to show the palette or make a brush from existing tiles with right-click (three button) or shift-click (one button)"
             title="Editing tip">
       </tip>
    </extension>
