Changed .project editor name to "Game Project Editor"

--- a/com.dynamo.cr/com.dynamo.cr.editor.ui/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor.ui/plugin.xml
@@ -9,7 +9,7 @@
             default="false"
             extensions="project"
             id="com.dynamo.cr.editor.ui.gameProjectEditor"
-            name="Game Project">
+            name="Game Project Editor">
       </editor>
    </extension>
    <extension
