--- a/com.dynamo.cr/com.dynamo.cr.editor.ui/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.editor.ui/plugin.xml
@@ -21,5 +21,48 @@
             title="Game Engine Settings">
       </tip>
    </extension>
+   <extension
+         point="org.eclipse.core.expressions.propertyTesters">
+      <propertyTester
+            class="com.dynamo.cr.editor.ui.tip.TipAvailablePropertyTester"
+            id="com.dynamo.cr.editor.ui.tipAvailable"
+            namespace="com.dynamo.cr.editor.ui"
+            properties="tip_available"
+            type="java.lang.Object">
+      </propertyTester>
+   </extension>
+   <extension
+         id="com.dynamo.cr.editor.ui.handlers.showTip"
+         name="Show Tip"
+         point="org.eclipse.ui.commands">
+      <command
+            id="com.dynamo.cr.editor.ui.commands.showEditorTip"
+            name="Show Editor Tip">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="menu:help">
+         <command
+               commandId="com.dynamo.cr.editor.ui.commands.showEditorTip"
+               label="Show Editor Tip"
+               style="push">
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="com.dynamo.cr.editor.ui.handlers.ShowEditorTip"
+            commandId="com.dynamo.cr.editor.ui.commands.showEditorTip">
+         <enabledWhen>
+            <test
+                  property="com.dynamo.cr.editor.ui.tip_available">
+            </test>
+         </enabledWhen>
+      </handler>
+   </extension>
 
 </plugin>
