Improved logging setup. case 1272
* Moved logging setup from Server to bundle activator
* Removed all default java.util.logging-handlers
* Installed java.util.logging to slf4 bridge
  java.util.logging is used by grizzly

--- a/com.dynamo.cr/com.dynamo.cr.common/build.properties
+++ b/com.dynamo.cr/com.dynamo.cr.common/build.properties
@@ -31,4 +31,5 @@ bin.includes = META-INF/,\
                DYNAMO_HOME/share/java/upnp.jar,\
                ext/commons-configuration-1.8.jar,\
                ext/commons-lang-2.6.jar,\
-               ext/commons-logging-1.1.1.jar
+               ext/commons-logging-1.1.1.jar,\
+               ext/slf4j/jul-to-slf4j-1.6.4.jar
