--- a/com.dynamo.cr/com.dynamo.cr.common/.classpath
+++ b/com.dynamo.cr/com.dynamo.cr.common/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="ext/slf4j/jul-to-slf4j-1.6.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/commons-logging-1.1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/commons-configuration-1.8.jar"/>
 	<classpathentry exported="true" kind="lib" path="ext/commons-lang-2.6.jar"/>
