Added new gui, gui script, script and folder to File > New. case 553

--- a/com.dynamo.cr/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.ddfeditor/plugin.xml
@@ -501,6 +501,9 @@
          <newWizardShortcut
                id="com.dynamo.cr.ddfeditor.wizards.ConvexShapeNewWizard">
          </newWizardShortcut>
+         <newWizardShortcut
+               id="com.dynamo.cr.ddfeditor.wizards.GuiNewWizard">
+         </newWizardShortcut>
       </perspectiveExtension>
    </extension>
    <extension
