--- a/com.dynamo.cr/com.dynamo.cr.web2/.gitignore
+++ b/com.dynamo.cr/com.dynamo.cr.web2/.gitignore
@@ -4,6 +4,7 @@
 /war/WEB-INF/lib/*.jar
 /war/WEB-INF/appengine-generated
 /war/index.html
+/war/unsubscribe.html
 /war/defold/
 /war/doc/*.json
 /war/site/
