Icon render support in scene-editor and various render refactoring. case 539
* Generic base-class for icon rendering
 - Implemented for: camera, factory, gui and lights
* INodeRender refactoring
 - Node renderers are now created on a per context basis
   in order to be able to cache opengl-resources
* Render pass parameters
 - isSelectionPass: true of the pass is a selection pass
 - transformModel: true if the model-matrix should be 
   updated according to node hierarchy
* TextureRegistry
 - Utility-class for loading textures from java classpath
   based resources
* New passes, ICON and ICON_SELECTION
* Replaced factory icon with correct one

--- a/com.dynamo.cr/com.dynamo.cr.ddfeditor/plugin.xml
+++ b/com.dynamo.cr/com.dynamo.cr.ddfeditor/plugin.xml
@@ -35,7 +35,7 @@
             contributorClass="com.dynamo.cr.editor.ui.DefoldEditorActionBarContributor"
             default="false"
             extensions="factory"
-            icon="icons/lightning.png"
+            icon="icons/factory.png"
             id="com.dynamo.cr.ddfeditor.factoryEditor"
             name="Scene Editor">
       </editor>
@@ -147,7 +147,7 @@
       <wizard
             category="com.dynamo.cr.editor.wizardCategory"
             class="com.dynamo.cr.ddfeditor.wizards.FactoryNewWizard"
-            icon="icons/lightning.png"
+            icon="icons/factory.png"
             id="com.dynamo.cr.ddfeditor.wizards.FactoryNewWizard"
             name="Factory File">
       </wizard>
@@ -509,6 +509,7 @@
             id="com.dynamo.cr.ddfeditor.scene.factoryNode"
             loader="com.dynamo.cr.ddfeditor.scene.FactoryLoader"
             node="com.dynamo.cr.ddfeditor.scene.FactoryNode"
+            renderer="com.dynamo.cr.ddfeditor.scene.FactoryRenderer"
             resource-type="com.dynamo.cr.ddfeditor.resourcetypes.Factory">
       </node-type>
       <node-type
@@ -537,6 +538,7 @@
             id="com.dynamo.cr.ddfeditor.scene.cameraNode"
             loader="com.dynamo.cr.ddfeditor.scene.CameraLoader"
             node="com.dynamo.cr.ddfeditor.scene.CameraNode"
+            renderer="com.dynamo.cr.ddfeditor.scene.CameraRenderer"
             resource-type="com.dynamo.cr.ddfeditor.resourcetypes.Camera">
       </node-type>
       <node-type
@@ -549,12 +551,14 @@
             id="com.dynamo.cr.ddfeditor.scene.lightNode"
             loader="com.dynamo.cr.ddfeditor.scene.LightLoader"
             node="com.dynamo.cr.ddfeditor.scene.LightNode"
+            renderer="com.dynamo.cr.ddfeditor.scene.LightRenderer"
             resource-type="com.dynamo.cr.ddfeditor.resourcetypes.Light">
       </node-type>
       <node-type
             id="com.dynamo.cr.ddfeditor.scene.guiNode"
             loader="com.dynamo.cr.ddfeditor.scene.GuiLoader"
             node="com.dynamo.cr.ddfeditor.scene.GuiNode"
+            renderer="com.dynamo.cr.ddfeditor.scene.GuiRenderer"
             resource-type="com.dynamo.cr.ddfeditor.resourcetypes.Gui">
       </node-type>
       <node-type
